Changed "overflow-x: auto;" property to "overflow: auto;" to fix a layout bug in IE, Opera and Safari, on the ManageStudiesPage. Only FF liked the overflow-x property. IE now displays a vertical scroll bar in addition to the horizontal scroll bar, but this is the best case scenario across all browsers. (Tickets #68326)

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -1175,7 +1175,7 @@ td.vdcEditFilesColC{
 
 /* Manage Studies Page */
 .dvnManageStudiesTableTop {border: 1px solid #d9d9d9; border-bottom: 0;}
-.dvnManageStudiesTableBlock {overflow-x: scroll;}
+.dvnManageStudiesTableBlock {width: 100%; overflow: auto;}
 .dvnManageStudiesTable {margin-top: 0;}
 .dvnManageStudiesTable span.iceOutTxt {font-size: 90% !important;}
 .dvnManageStudiesTable th span.iceOutTxt {font-size: 100% !important;}
